[gd_scene load_steps=44 format=3 uid="uid://cje4siaycxq73"]

[ext_resource type="PackedScene" uid="uid://qp5b68lblvj7" path="res://puzzle.tscn" id="1_4c57u"]
[ext_resource type="Texture2D" uid="uid://ceac6m1iurrfk" path="res://platforms.png" id="1_lquwl"]
[ext_resource type="Script" uid="uid://37it3n683gea" path="res://scripts/player.gd" id="2_h2yge"]
[ext_resource type="Script" uid="uid://bkimxg6ljruy2" path="res://scripts/map_generator.gd" id="2_kek77"]
[ext_resource type="Texture2D" uid="uid://c23nmjy3rd7cu" path="res://merlin_.png" id="4_lquwl"]
[ext_resource type="Texture2D" uid="uid://xu7kfr3d3i7w" path="res://hurt.png" id="5_5vw27"]
[ext_resource type="Script" uid="uid://cgh8g6xko4f57" path="res://scripts/spawner.gd" id="5_lquwl"]
[ext_resource type="FontFile" uid="uid://dpglrsp33l377" path="res://bitbybit_ [Font].ttf" id="6_5vw27"]
[ext_resource type="Script" uid="uid://cs1h7waeesylw" path="res://scripts/card_manager.gd" id="6_7mycd"]
[ext_resource type="AudioStream" uid="uid://dduwqm5p2sid3" path="res://sound/01_Power down_v1.wav" id="6_272bh"]
[ext_resource type="Texture2D" uid="uid://b6iuagxu2w8i2" path="res://images/bubble.png" id="8_efxa6"]
[ext_resource type="Texture2D" uid="uid://bjceknsklv42t" path="res://images/light.png" id="9_cegan"]
[ext_resource type="Texture2D" uid="uid://cvwuqrcaiu7v7" path="res://images/cards/bubble_card.png" id="10_w48qg"]
[ext_resource type="Texture2D" uid="uid://b144hfnuduhd8" path="res://images/cards/card.png" id="10_ycdy4"]
[ext_resource type="AudioStream" uid="uid://cesg3gmxtiquk" path="res://sound/bubble-pop-06-351337.mp3" id="12_dg77c"]
[ext_resource type="Texture2D" uid="uid://pcte6lja3jq" path="res://images/buttons/button.png" id="15_1u8w0"]
[ext_resource type="Texture2D" uid="uid://brabnxy1u1qkm" path="res://images/buttons/start_button.png" id="15_xuqvo"]
[ext_resource type="Texture2D" uid="uid://lq7k8suf88ud" path="res://images/background/1.Backround.png" id="15_yaehf"]
[ext_resource type="Texture2D" uid="uid://beib7hx6ll0l2" path="res://images/buttons/button_press.png" id="16_0odxb"]
[ext_resource type="Texture2D" uid="uid://c5xw352o4bk3k" path="res://images/background/2.Trees_back.png" id="16_074og"]
[ext_resource type="Texture2D" uid="uid://gulxhtm52yr6" path="res://images/buttons/start_pressed.png" id="16_qsp4k"]
[ext_resource type="Texture2D" uid="uid://eag06axsbncb" path="res://images/buttons/home.png" id="17_0odxb"]
[ext_resource type="Texture2D" uid="uid://df2we04j707oe" path="res://images/background/3.Trees_front.png" id="17_cegan"]
[ext_resource type="Texture2D" uid="uid://cmsdev3fl82ld" path="res://images/buttons/tutorial_button.png" id="17_kq58d"]
[ext_resource type="Texture2D" uid="uid://ddu5abvgdi3cy" path="res://images/buttons/tutorial_screen.png" id="17_lswn8"]
[ext_resource type="Texture2D" uid="uid://dh56vu8nltmrw" path="res://images/background/4.Ground.png" id="18_074og"]
[ext_resource type="Texture2D" uid="uid://dhwoynh51p74n" path="res://images/buttons/tutorial_pressed.png" id="18_seu75"]
[ext_resource type="Script" uid="uid://cteq2nm2kax4h" path="res://day_night.gd" id="20_82xsv"]
[ext_resource type="AudioStream" uid="uid://j2iaw24qhl1q" path="res://sound/02_Game Start_v2.wav" id="21_getpj"]
[ext_resource type="AudioStream" uid="uid://ctefpixcjxvip" path="res://sound/02_Game Over_v1.wav" id="22_ryguw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mycd"]
texture = ExtResource("1_lquwl")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.9892292, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_h2yge"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_7mycd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(20, 22)

[sub_resource type="GDScript" id="GDScript_lquwl"]
script/source = "extends Camera2D

@export var decay_rate = 0.8 
@export var max_offset = Vector2(10, 10) 

var trauma = 0.0 # current shake strength

func _process(delta):
	if trauma > 0:
		trauma = max(trauma - decay_rate * delta, 0)
		
		shake()
	else:
		offset = Vector2.ZERO
		rotation = 0

func shake():
	var amount = trauma * trauma
	
	offset.x = max_offset.x * amount * randf_range(-1, 1)
	offset.y = max_offset.y * amount * randf_range(-1, 1)

func add_trauma(amount):
	trauma = min(trauma + amount, 1.0)
"

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("4_lquwl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("4_lquwl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("4_lquwl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("4_lquwl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4c57u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_074og"]

[sub_resource type="Animation" id="Animation_82xsv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlobalLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1764706, 0.1764706, 0.3019608, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground/CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.1764706, 0.1764706, 0.3019608, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_cegan"]
resource_name = "day_night_cycle"
length = 24.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlobalLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.16666667, 6.0666666, 12.1, 18.133333, 23.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.76862746, 0.5019608, 1), Color(0.1764706, 0.1764706, 0.3019608, 1), Color(1, 0.81960785, 0.7294118, 1), Color(0.9886253, 0.9886253, 0.9903585, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ParallaxBackground/CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.16666666, 6.0666666, 12.133333, 18.166666, 24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.76862746, 0.5019608, 1), Color(0.1764706, 0.1764706, 0.3019608, 1), Color(1, 0.81960785, 0.7294118, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player/PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6.1, 12.166667, 18.166666),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_getpj"]
_data = {
&"RESET": SubResource("Animation_82xsv"),
&"day_night_cycle": SubResource("Animation_cegan")
}

[node name="Node2D" type="Node2D"]

[node name="puzzle" parent="." instance=ExtResource("1_4c57u")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
position = Vector2(24, 0)
tile_map_data = PackedByteArray(0, 0, 2, 0, 2, 0, 0, 0, 17, 0, 7, 0, 0, 0)
tile_set = SubResource("TileSet_h2yge")
script = ExtResource("2_kek77")

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("puzzle") groups=["player"]]
process_mode = 3
position = Vector2(-3, 197)
script = ExtResource("2_h2yge")
puzzle = NodePath("../puzzle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-188, -30)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(1, -23)
zoom = Vector2(2, 2)
drag_horizontal_offset = -0.9
drag_vertical_offset = -1.0
script = SubResource("GDScript_lquwl")

[node name="Marker2D" type="Marker2D" parent="Player/Camera2D"]
process_mode = 1
position = Vector2(125, -43)
script = ExtResource("5_lquwl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(-187, -34)
scale = Vector2(1.2812502, 1.2499999)
sprite_frames = SubResource("SpriteFrames_4c57u")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="HurtIcon" type="Sprite2D" parent="Player"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-170, -45)
scale = Vector2(0.7459215, 0.7860161)
texture = ExtResource("5_5vw27")

[node name="BubbleSprite" type="Sprite2D" parent="Player"]
visible = false
texture_filter = 1
position = Vector2(-187, -30)
texture = ExtResource("8_efxa6")

[node name="PointLight2D" type="PointLight2D" parent="Player"]
position = Vector2(-187, -31.000004)
scale = Vector2(0.19683906, 0.11894966)
energy = 0.5
range_layer_min = -100
shadow_enabled = true
shadow_color = Color(0.65096724, 0.76674867, 0.7435895, 0)
texture = ExtResource("9_cegan")
texture_scale = 5.28

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -99.0
offset_right = 182.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
script = ExtResource("6_7mycd")

[node name="Card" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
texture_filter = 3
layout_mode = 2
texture_normal = ExtResource("10_w48qg")

[node name="Card2" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("10_ycdy4")

[node name="Card3" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("10_ycdy4")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
texture_filter = 1
offset_left = 7.0
offset_top = 1.0
offset_right = 411.0
offset_bottom = 41.0
scale = Vector2(1.029177, 1.5131271)

[node name="HealthLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0.8771302, 0.44232845, 0.9942425, 1)
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("6_5vw27")
text = "Health: 10"

[node name="ActiveCardLabel" type="Label" parent="CanvasLayer/HBoxContainer2" groups=["card_label"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_5vw27")
text = "Active Card: None"

[node name="PlayerHurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_272bh")

[node name="StartLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="StartScreen" type="ColorRect" parent="StartLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0230381, 1.040947)

[node name="Label" type="Label" parent="StartLayer/StartScreen"]
modulate = Color(0.2, 0.6901961, 0.8666667, 1)
texture_filter = 1
layout_mode = 1
offset_left = 92.86066
offset_top = 6.724646
offset_right = 225.86066
offset_bottom = 30.724646
scale = Vector2(3.3558853, 4.286645)
theme_override_fonts/font = ExtResource("6_5vw27")
text = "WELCOME"

[node name="Button2" type="TextureButton" parent="StartLayer/StartScreen"]
texture_filter = 3
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 193.5412
offset_top = -21.490479
offset_right = -136.4588
offset_bottom = 48.50952
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("15_xuqvo")
texture_pressed = ExtResource("16_qsp4k")

[node name="Button3" type="TextureButton" parent="StartLayer/StartScreen"]
texture_filter = 3
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 195.49612
offset_top = 47.677307
offset_right = -134.50388
offset_bottom = 117.67731
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("17_kq58d")
texture_pressed = ExtResource("18_seu75")

[node name="GameOverLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="GameOverScreen" type="ColorRect" parent="GameOverLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -617.59204
offset_bottom = -338.2895
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29.007545, 16.950323)

[node name="Button" type="TextureButton" parent="GameOverLayer/GameOverScreen"]
texture_filter = 3
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0673866
offset_top = 1.2389088
offset_right = 293.65942
offset_bottom = 71.23891
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.066)
texture_normal = ExtResource("15_1u8w0")
texture_pressed = ExtResource("16_0odxb")

[node name="Label" type="Label" parent="GameOverLayer/GameOverScreen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.7236893
offset_top = 0.41297147
offset_right = 133.93628
offset_bottom = 24.412971
grow_horizontal = 2
scale = Vector2(0.12331581, 0.27169544)
theme_override_colors/font_color = Color(0.6431373, 0.49411765, 0.44705883, 1)
theme_override_fonts/font = ExtResource("6_5vw27")
text = "GAME OVER"

[node name="Tutorial" type="CanvasLayer" parent="."]
process_mode = 3

[node name="TutorialScreen" type="TextureRect" parent="Tutorial"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -617.59204
offset_bottom = -338.2895
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29.007545, 16.950323)
texture = ExtResource("17_lswn8")
expand_mode = 1

[node name="Button" type="TextureButton" parent="Tutorial/TutorialScreen"]
texture_filter = 3
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 19.960325
offset_top = 7.9054527
offset_right = 307.55237
offset_bottom = 77.90546
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.15)
texture_normal = ExtResource("17_0odxb")
texture_pressed = ExtResource("17_0odxb")

[node name="BubbleSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_dg77c")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
scale = Vector2(1.2, 1.2)
texture = ExtResource("15_yaehf")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
scale = Vector2(1.2, 1.2)
texture = ExtResource("16_074og")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_filter = 1
scale = Vector2(1.2, 1.2)
texture = ExtResource("17_cegan")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, 7)
motion_mirroring = Vector2(320, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture_filter = 1
position = Vector2(1, -54.000004)
scale = Vector2(1.6237469, 1.7788705)
texture = ExtResource("18_074og")
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="ParallaxBackground"]
color = Color(0.1764706, 0.1764706, 0.3019608, 1)

[node name="GroundLayer" type="StaticBody2D" parent="."]
position = Vector2(2, 68)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundLayer"]
position = Vector2(5, 147)
shape = SubResource("WorldBoundaryShape2D_074og")

[node name="GlobalLight" type="CanvasModulate" parent="."]
color = Color(0.1764706, 0.1764706, 0.3019608, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_getpj")
}
autoplay = "day_night_cycle"
script = ExtResource("20_82xsv")

[node name="StartSFX" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("21_getpj")

[node name="GameOverSFX" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("22_ryguw")

[connection signal="pressed" from="StartLayer/StartScreen/Button2" to="Player" method="start_game"]
[connection signal="pressed" from="StartLayer/StartScreen/Button3" to="Player" method="start_tutorial"]
[connection signal="pressed" from="GameOverLayer/GameOverScreen/Button" to="Player" method="_on_button_pressed"]
[connection signal="pressed" from="Tutorial/TutorialScreen/Button" to="Player" method="_on_tutorial_button_pressed"]
